--- a/index.html
+++ b/index.html
@@ -629,11 +629,11 @@
                 <div class="col-lg-10 neutral shadow p-5">
                   <ul class="nav d-flex justify-content-center">
                     <li class="nav-item ">
-                      <button class="btn btn-outline-accent btn-rounded mt-1 nav-link active mx-3" id="login-tab"
+                      <button class="btn primary btn-rounded mt-1 nav-link active mx-3" id="login-tab"
                         data-bs-toggle="tab" href="#login">&nbsp; Login&nbsp; </button>
                     </li>
                     <li class="nav-item">
-                      <button class="btn btn-outline-accent btn-rounded mt-1 nav-link mx-3" id="register-tab"
+                      <button class="btn primary btn-rounded mt-1 nav-link mx-3" id="register-tab"
                         data-bs-toggle="tab" href="#register">Register</button>
                     </li>
                   </ul>
@@ -656,7 +656,7 @@
                           <a href="#" style="margin-left: 15px ;">Forgot password?</a>
                         </div>
                         <div class="d-flex justify-content-end">
-                          <button type="submit" class="btn primary">Sign In</button>
+                          <button type="submit" class="btn accent">Sign In</button>
                         </div>
                       </form>
                     </div>
@@ -685,7 +685,9 @@
                           <input type="password" class="form-control" id="register-password-repeat"
                             placeholder="Repeat your password">
                         </div>
-                        <button type="submit" class="btn primary">Register</button>
+                        <div class="d-flex justify-content-end">
+                        <button type="submit" class="btn accent">Register</button>
+                        </div>
                       </form>
                     </div>
                   </div>
